terminado admins medicamento   se corrigio paciente

--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -19,7 +19,7 @@
                         <h:form id="control">  
                             <br/>
                             <h:link value="#{messages['panel.admin']} " rendered="#{true}" 
-                                    outcome="/pages/admin/home.xhtml?faces-redirect=true" styleClass="btn secondary">                                
+                                    outcome="/pages/home.xhtml?faces-redirect=true" styleClass="btn secondary">                                
                             </h:link>  
                             <br/>                                             
                         </h:form>
@@ -32,7 +32,7 @@
         <ui:define name="content">           
             <!--Metadato que se realiza antes de renderizarse la vista-->
             <f:metadata>
-                <f:viewParam name="result" value="#{medicamentoListaServicio.resultList}" />
+                <f:viewParam name="result" value="#{medicamentoListaServicio.primerResul}" />
             </f:metadata>
             <!--Formulario dentro de un contenedor-->
             <h:form id="form">            
@@ -41,7 +41,7 @@
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
 
                 <!--Botones de admin-->
-                <div class="admin-actions">
+                <div class="admin-actions span17">
                     <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="medicamento" styleClass="btn primary">
                         <f:param name="pacienteId"></f:param>
                         <f:param name="backView" value="lista"></f:param>
@@ -49,49 +49,70 @@
                     #{' '}
                     <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="medicamento" styleClass="btn" 
                             disabled="#{empty medicamentoListaServicio.medicamentoSeleccionado}">
-                        <f:param name="pacienteId" value="#{medicamentoListaService.medicamentoSelecionado.id}"></f:param>
+                        <f:param name="medicamentoId" value="#{medicamentoListaServicio.medicamentoSeleccionado.id}"></f:param>
                         <f:param name="backView" value="lista"></f:param>
                     </h:link>
                 </div>
 
-
-
                 <p:dataTable id="tablaMedicamentos"  var="medicamento_" value="#{medicamentoListaServicio}"
-                             paginator="true" rows="10"
+                             paginator="true" rows="10" styleClass="span18" style=""
                              paginatorAlwaysVisible="false"
                              paginatorPosition="top"
                              paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {NextPageLink}"
                              rowsPerPageTemplate="5,10,15"
                              lazy="true"
+                             rowKey="#{medicamento_.id}"
                              selection="#{medicamentoListaServicio.medicamentoSeleccionado}"
                              rendered="true"
                              selectionMode="single">
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
-                    <p:ajax event="rowSelect" listener="#{medicamentoListServicio.onRowSelect}"
+                    <p:ajax event="rowSelect" listener="#{medicamentoListaServicio.onRowSelect}"
                             update=":form:button-edit :form:messages "/>   
-                    <p:ajax event="rowUnselect" listener="#{medicamentoListServicio.onRowUnselect}" update=":form:button-edit :form:messages"/>
+                    <p:ajax event="rowUnselect" listener="#{medicamentoListaServicio.onRowUnselect}" update=":form:button-edit :form:messages"/>
                     <!--Columnas para mostrar en la tabla-->
-                    <p:column sortBy="#{medicamento_.nombreComercial}">
+
+                    <p:column sortBy="#{medicamento_.numeroFactura}" style="width: 10%; text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{'Nro. Factura'}" />  
+                        </f:facet>  
+                        <h:outputText value="#{medicamento_.numeroFactura}" />                        
+                    </p:column>
+                    <p:column sortBy="#{medicamento_.nombreComercial}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['common.nombre.comercial']}" />  
                         </f:facet> 
                         <h:outputText value="#{medicamento_.nombreComercial}" />
                     </p:column>
 
-                    <p:column sortBy="#{medicamento_.nombreGenerico}">
+                    <p:column sortBy="#{medicamento_.nombreGenerico}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['common.nombre.generico']}" />  
-                        </f:facet> 
-                        <h:outputText value="#{medicamento_.nombreGenerico}" />
+                        </f:facet>                         
+                        <h:outputText value="#{medicamento_.nombreGenerico}" />                            
                     </p:column>
 
+                    <p:column sortBy="#{medicamento_.unidades}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{'Unidades'}" />  
+                        </f:facet> 
+                        <h:outputText value="#{medicamento_.unidades}" />
+                    </p:column>
+
+                    <p:column sortBy="#{medicamento_.fechaCaducidad}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{'Fecha de Caducidad'}" />  
+                        </f:facet> 
+                        <h:outputText value="#{medicamento_.fechaCaducidad}" >
+                            <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
+                        </h:outputText>  
+                    </p:column>
+                    <!--
                     <p:column sortBy="#{medicamento_.referencia}">
                         <f:facet name="header">  
-                            <h:outputText value="#{messages['common.referencia.medicamento']}" />  
+                            <h:outputText value="#{messages['common.referenciaMedicamento']}" />  
                         </f:facet> 
                         <h:outputText value="#{medicamento_.referencia}" />
-                    </p:column>
-
+                    </p:column>-->
 
                 </p:dataTable>
 
