--- a/src/main/webapp/pages/loggedOffHome.xhtml
+++ b/src/main/webapp/pages/loggedOffHome.xhtml
@@ -50,11 +50,8 @@
 
             <div class="info" style="background-color: #00FFCC; margin: auto; margin-top: 5%; width: 100%; ">
                 <center>
-                    <div class="alert-message block-message warning" >    
-                        <h:link outcome="/pages/signup" value="#{messages['common.join']}" styleClass="btn large primary">
-                        </h:link>
-                        #{' '}
-                        <h:link value="#{messages['common.alreadyaccount']}" outcome="/pages/login" class="btn large">
+                    <div class="admin-actions" >                            
+                        <h:link value="#{messages['common.alreadyaccount']}" outcome="/pages/login" class="btn primary large">
                         </h:link>
                     </div>
                 </center>
