--- a/src/main/webapp/pages/profile/view.xhtml
+++ b/src/main/webapp/pages/profile/view.xhtml
@@ -43,12 +43,12 @@
                                                  update=":control :summary">
                                 </p:commandButton>
                                 <br/>
-                                <h:link outcome="profile" styleClass="btn" value="#{messages['common.edit']} #{messages['profile']}" rendered="#{profileHome.editionEnabled}">
+                                <!--<h:link outcome="profile" styleClass="btn" value="#{messages['common.edit']} #{messages['profile']}" rendered="#{profileHome.editionEnabled}">
                                     <f:param name="profileId" value="#{profileHome.instance.id}"/>
                                 </h:link>
                                 <br/>
                                 <h:link outcome="/pages/home" styleClass="btn secondary" value="#{messages['common.dashboard']}">
-                                </h:link>
+                                </h:link>-->
                             </h:form>
                         </div>
                     </div>
