--- a/src/main/webapp/pages/admin/security/group.xhtml
+++ b/src/main/webapp/pages/admin/security/group.xhtml
@@ -18,7 +18,7 @@
         </f:metadata>
         <ui:param name="title" value="#{not empty securityGroupHome.managed ? messages['common.edit'] : messages['common.add']} #{empty securityGroupHome.managed ? securityGroupHome.instance.name : messages['security.group']}" />
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
                         <h3>#{not empty securityGroupHome.managed ? messages['common.edit'] : messages['common.add']} #{empty securityGroupHome.managed ? securityGroupHome.instance.name : messages['security.group']}</h3>   
