--- a/src/main/webapp/pages/admin/security/list.xhtml
+++ b/src/main/webapp/pages/admin/security/list.xhtml
@@ -9,7 +9,7 @@
                 template="/WEB-INF/view/templates/glue.xhtml">    
     <ui:param name="title" value="#{messages['security.group']}" />
     <ui:define name="header-replace">        
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+        <div class="header-replace">
             <div class="container">
                 <div class="row fl" style="margin-top: 5px;">
                     <div class="span9 columns">   
