--- a/src/main/webapp/pages/profile/home.xhtml
+++ b/src/main/webapp/pages/profile/home.xhtml
@@ -16,7 +16,7 @@
         </ui:define>
 
         <ui:define name="topnav-post-template">
-            <h:panelGroup rendered="#{profile.persistent}">
+            <!--<h:panelGroup rendered="#{profile.persistent}">
                 <li>
                     <div class="linkball">◗</div>
                     <h:link outcome="/pages/profile/profile"
@@ -25,7 +25,7 @@
                         <f:param name="profileId" value="#{profile.id}" />
                     </h:link>
                 </li>
-            </h:panelGroup>
+            </h:panelGroup>-->
 
             <ui:insert name="topnav-post-profile"/>
         </ui:define>
